changed path for solve problems at deploiment

--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
       href="./pokemon_go_play_game_charcter_2_icon-icons.com_69164.png"
       type="image/x-icon"
     />
-    <script src="./js/index.js" type="module"></script>
+    <script src="js/index.js" type="module"></script>
     <title>Pokemon Life</title>
   </head>
   <body></body>
