added types for pokemons, changed the iterface of pokemon data

--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,7 @@
       type="image/x-icon"
     />
     <script src="js/index.js" type="module"></script>
+    <link rel="stylesheet" href="./css/styles.css" />
     <title>Pokemon Life</title>
   </head>
   <body></body>
